# alaya

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  smithery.yaml
.github/workflows/: ci.yml  release.yml
alaya-paper/: main.tex
alaya-paper/sections/: 01-introduction.tex  03-architecture.tex  04-emergent-ontology.tex  05-implementation.tex  07-discussion.tex  08-conclusion.tex
bench/: .gitignore  pyproject.toml  run.py
bench/datasets/: download.py
bench/judge/: llm_judge.py
bench/runners/: mab.py
docs/: benchmark-evaluation.md  design.md  mcp-quickstart.md  memory-landscape.html  related-work.md  theoretical-foundations.md
docs/assets/: gen_benchmark_chart.py
docs/plans/: 2026-02-27-demo-agent-design.md  2026-03-02-emergent-ontology-mvp-plan.md  2026-03-02-emergent-ontology-v020-plan.md  2026-03-02-v010-publish.md  2026-03-07-v0.2.0-design.md  2026-03-07-v0.2.0-implementation.md
examples/: demo.rs
north-star-advisor/: ai-context.yml
north-star-advisor/.work-in-progress/: discovery.md  inputs.yml  state.json
north-star-advisor/docs/: ACTION_ROADMAP.md  ADR.md  ARCHITECTURE_BLUEPRINT.md  BRAND_GUIDELINES.md  COMPETITIVE_LANDSCAPE.md  INDEX.md  NORTHSTAR.md  NORTHSTAR_EXTRACT.md  POST_DEPLOYMENT.md  SECURITY_ARCHITECTURE.md  STRATEGIC_RECOMMENDATION.md
npm/alaya-mcp/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-x64/: package.json
paper/: Makefile  main.tex  references.bib
paper-alaya/: Makefile  main.tex  references.bib
paper-alaya/sections/: 01-introduction.tex  02-background.tex  03-architecture.tex  04-emergent-ontology.tex  05-implementation.tex  06-evaluation.tex  07-discussion.tex  (+1 more)
src/: extraction.rs  lib.rs  mcp.rs  provider.rs  schema.rs  types.rs
survey-paper/: main.tex  references.bib
tests/: integration.rs  mcp_tools.rs
(+98 files in other folders)
