[package]
name = "alaya"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Albert Hui <albert@securityronin.com>"]
description = "A memory engine for conversational AI agents, inspired by neuroscience and Buddhist psychology"
license = "MIT"
repository = "https://github.com/SecurityRonin/alaya"
documentation = "https://docs.rs/alaya"
readme = "README.md"
keywords = ["memory", "ai", "rag", "conversational", "embedding"]
categories = ["database", "science"]

[features]
mcp = ["dep:rmcp", "dep:tokio", "dep:schemars", "dep:anyhow"]

[dependencies]
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

# MCP server (optional, for alaya-mcp binary)
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
schemars = { version = "0.8", optional = true }
anyhow = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[[bin]]
name = "alaya-mcp"
path = "src/bin/alaya-mcp.rs"
required-features = ["mcp"]
